# aws-payment-cryptography-hsm-proxy

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  proxy.example.yaml  proxy.yaml  release-notes-v0.3.0.md  release-notes-v0.4.0.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: grounding-report.md  key-presentation.md  property-testing-plan.md  setup.md  test-grounding-inventory.md  threat-model.md
scripts/: delete_test_keys.py  import_test_keys.py
src/: config.rs  error.rs  hsm_client.rs  hsm_probe.rs  key_map.rs  lib.rs  main.rs  server.rs  tests.rs  vendor.rs  verify.rs
src/handlers/: grounding.rs  mod.rs  noop.rs
src/handlers/futurex/: echo.rs  mod.rs  tpin.rs
src/handlers/thales/: cap_arqc.rs  common.rs  cvv.rs  diebold_pin.rs  dukpt_mac.rs  dukpt_pin_verify.rs  dukpt_pin_verify_aes.rs  dynamic_cvv.rs  emv_decrypt.rs  encrypt_decrypt.rs  heartbeat.rs  hmac.rs  international_encrypt.rs  issuer_script_mac.rs  kq_arqc.rs  kw_arqc.rs  legacy_mac.rs  mac.rs  mac_translate.rs  mod.rs  pin.rs  pin_change.rs  pin_verify_non_dukpt.rs  random_pin.rs  reader.rs  unionpay_arqc.rs
src/protocol/: futurex.rs  mod.rs  thales.rs
tests/: forward_tls.rs  grounding.rs  hsm_probe.rs  inbound_limits.rs  integration.rs  mock_apc.rs  passthrough.rs  proptest_live.rs  tls.rs
tests/common/: mock_hsm.rs  mod.rs  proxy_process.rs  tls_certs.rs
