[package]
name = "apc-proxy"
version = "0.1.0"
edition = "2021"
description = "Thales payShield 10K and Futurex Excrypt → AWS Payment Cryptography protocol proxy"
license = "Apache-2.0"

[[bin]]
name = "apc-proxy"
path = "src/main.rs"

[features]
default = ["ring"]
ring = ["rustls/ring", "tokio-rustls/ring"]
aws-lc-rs = ["rustls/aws-lc-rs", "tokio-rustls/aws-lc-rs"]

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-paymentcryptographydata = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
zeroize = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
async-trait = "0.1"
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false }
rustls-pemfile = "2"
serde_json = "1"

[dev-dependencies]
proptest = "1"
aws-credential-types = "1"
