[package]
name = "apc-proxy"
version = "0.3.0"
edition = "2021"
description = "Thales payShield 10K and Futurex Excrypt → AWS Payment Cryptography protocol proxy"
license = "Apache-2.0"
repository = "https://github.com/J8k3/aws-payment-cryptography-hsm-proxy"
homepage = "https://github.com/J8k3/aws-payment-cryptography-hsm-proxy"
readme = "README.md"
keywords = ["aws", "payment-cryptography", "hsm", "payshield", "futurex"]
categories = ["cryptography", "command-line-utilities", "network-programming"]

[[bin]]
name = "apc-proxy"
path = "src/main.rs"

[features]
default = ["ring"]
ring = ["rustls/ring", "tokio-rustls/ring"]
aws-lc-rs = ["rustls/aws-lc-rs", "tokio-rustls/aws-lc-rs"]

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-paymentcryptography = "1"
aws-sdk-paymentcryptographydata = "1.110" # >=1.110 for generate_auth_request_cryptogram (ARQC accept-path test)
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
zeroize = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
async-trait = "0.1"
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false }
rustls-pemfile = "2"
serde_json = "1"

[dev-dependencies]
proptest = "1"
rcgen = "0.13"
rand = "0.9"

[lints.rust]
dead_code = "deny"
unused_imports = "deny"

[lints.clippy]
# Hard errors — never acceptable
unwrap_used = "deny"

# Pedantic group at priority -1 so individual overrides below take precedence
pedantic = { level = "warn", priority = -1 }

# Suppress: intentional patterns in this codebase
items_after_statements = "allow"  # SDK `use` inside handlers is deliberate scoping
similar_names = "allow"           # arc/arqc, pan_start/pin_start are domain vocabulary
doc_markdown = "allow"            # protocol field names (TxnLen, PAD_len) are not Rust identifiers
doc_link_with_quotes = "allow"    # quotes in protocol wire-format docs are intentional
struct_field_names = "allow"      # TlsConfig cert_file/key_file/ca_file suffix is intentional
too_many_lines = "allow"          # protocol handlers are inherently verbose
module_name_repetitions = "allow" # e.g. DukptMacHandler in dukpt_mac — explicit is fine
large_futures = "allow"           # noted; async state machine restructuring deferred
large_stack_arrays = "allow"      # protocol frame buffers are large by nature
range_plus_one = "allow"          # slice[start..start + LEN] is clearer than ..=start+LEN-1
cast_possible_truncation = "allow" # all casts are from fields with bounded widths
# The library surface (src/lib.rs) exists only so test crates can reach internals;
# public-API doc/must_use/hasher pedantry adds no value for a test-only surface.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
implicit_hasher = "allow"
